# template

./: .flake8  README.md  noxfile.py  pyproject.toml
docs/: conf.py  index.rst  reference.rst
src/template/: __init__.py  fire_utils.py  hello.py  hello_scripts.py
tests/: __init__.py  test_hello.py
