[tool.poetry]
name = "template"
description = "Template repository for setting up python project"
readme = "README.md"
repository = "https://github.com/spreemohealth/template"
version = "0.1.0"
authors = ["GTLangseth <grant.langseth@coverahealth.com>"]
packages = [
    { include = "template", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
fire = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {version = "^5.1", extras = ["toml"]}
pytest-cov = "^2.10.0"
pytest-mock = "^3.1.1"
black = "^19.10b0"
flake8 = "^3.8.3"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.0"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
pre-commit = "^2.5.1"
flake8-docstrings = "^1.5.0"
flake8-annotations = "^2.1.0"
sphinx-autodoc-typehints = "^1.10.3"
darglint = "^1.4.1"
xdoctest = "^0.12.0"
sphinx = "^3.1.1"
mypy = "^0.780"

[tool.poetry.scripts]
hello = "template.hello_scripts:hello_bonfire"
hello-class = "template.hello_scripts:hello_class"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["template"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
